[gd_scene load_steps=4 format=3 uid="uid://dmvmeyp7onfhu"]

[ext_resource type="Script" uid="uid://cannl654an5w7" path="res://control.gd" id="1_8sq4i"]
[ext_resource type="FontFile" uid="uid://dnme76slsvmd3" path="res://imagens/Mapa/PNG/Objects/RevMiniPixel.ttf" id="2_640wx"]
[ext_resource type="Texture2D" uid="uid://b7pbfhnqftlq4" path="res://imagens/Player/3 SteamMan/SteamMan.png" id="3_a2258"]

[node name="HUD" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8sq4i")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 39.0
grow_horizontal = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="score_conteiner" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="score_label" type="Label" parent="Control/MarginContainer/score_conteiner"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_640wx")
theme_override_font_sizes/font_size = 45
text = "score: "

[node name="score_counter" type="Label" parent="Control/MarginContainer/score_conteiner"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_640wx")
theme_override_font_sizes/font_size = 45
text = "0000"

[node name="life_container" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="life_label" type="TextureRect" parent="Control/MarginContainer/life_container"]
layout_mode = 2
texture = ExtResource("3_a2258")

[node name="life_counter" type="Label" parent="Control/MarginContainer/life_container"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_640wx")
theme_override_font_sizes/font_size = 45
text = "02"
